# metaflow-notifications

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
metaflow_extensions/notifications/plugins/: _message.py  mfextinit_notifications.py  notify_decorator.py
tests/: conftest.py
tests/unit/: test_message.py  test_notify_flow.py  test_notify_step.py
